--- a/C-Sharp-Web-Basics/Exam Preparation/SharedTrip/SharedTrip/Views/Trips/All.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/SharedTrip/SharedTrip/Views/Trips/All.cshtml
@@ -2,6 +2,8 @@
     <div class="container">
         <h1 style="margin: 2%; text-align: center;">All Trips</h1>
         <div style="padding: 5%;">
+            @foreach(var trip in Model)
+            {
             <table class="table">
                 <thead class="thead-dark">
                 <tr>
@@ -14,18 +16,19 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <th scope="row">StartPoint</th>
-                    <td>EndPoint</td>
-                    <td>DepartureTime</td>
-                    <td>Seats</td>
+                    <th scope="row">@trip.StartingPoint</th>
+                    <td>@trip.EndinPoint</td>
+                    <td>@trip.DepartureTime</td>
+                    <td>@trip.Seats</td>
                     <td>
                         <div class="button-holder">
-                            <a href="/Trips/Details?tripId=Id" class="btn btn-info text-uppercase">Info</a>
+                            <a href="/Trips/Details?tripId=@trip.Id" class="btn btn-info text-uppercase">Info</a>
                         </div>
                     </td>
                 </tr>
                 </tbody>
             </table>
+        }
         </div>
     </div>
 </section>
