--- a/C-Sharp-Web-Basics/Exam Preparation/SharedTrip/SharedTrip/Views/Trips/All.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/SharedTrip/SharedTrip/Views/Trips/All.cshtml
@@ -2,8 +2,6 @@
     <div class="container">
         <h1 style="margin: 2%; text-align: center;">All Trips</h1>
         <div style="padding: 5%;">
-            @foreach(var trip in Model)
-            {
             <table class="table">
                 <thead class="thead-dark">
                 <tr>
@@ -15,9 +13,11 @@
                 </tr>
                 </thead>
                 <tbody>
+            @foreach(var trip in Model)
+            {
                 <tr>
                     <th scope="row">@trip.StartingPoint</th>
-                    <td>@trip.EndinPoint</td>
+                    <td>@trip.EndingPoint</td>
                     <td>@trip.DepartureTime</td>
                     <td>@trip.Seats</td>
                     <td>
@@ -26,9 +26,9 @@
                         </div>
                     </td>
                 </tr>
+        }
                 </tbody>
             </table>
-        }
         </div>
     </div>
 </section>
