--- a/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Layout.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Layout.cshtml
@@ -12,6 +12,8 @@
         <a class="navbar-brand" href="/">SMS</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
+                @if(User != null)
+                {
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Home</a>
                 </li>
@@ -21,8 +23,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Users/Logout">Logout</a>
                 </li>
+                }
             </ul>
             <ul class="navbar-nav ml-auto">
+                @if(User == null)
+                {
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home</a>
                 </li>
@@ -32,6 +37,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Users/Register">Register</a>
                 </li>
+                }
             </ul>
         </div>
     </nav>
