--- a/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Home/IndexLoggedIn.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Home/IndexLoggedIn.cshtml
@@ -14,13 +14,16 @@
             </thead>
             <tbody>
                 <tr class="row">
-                    <td class="col-lg-5">ProductName</td>
-                    <td class="col-lg-5">ProductPrice</td>
+                    @foreach(var product in Model)
+                    {
+                    <td class="col-lg-5">@product.Name</td>
+                    <td class="col-lg-5">@product.Price</td>
                     <td class="col-lg-2">
                         <div class="button-holder">
-                            <a href="/Carts/AddProduct?productId=ProductId" class="btn btn-outline-primary">Add to Cart</a>
+                            <a href="/Carts/AddProduct?productId=@product.Id" class="btn btn-outline-primary">Add to Cart</a>
                         </div>
                     </td>
+                    }
                 </tr>
             </tbody>
         </table>
