--- a/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Carts/Details.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Carts/Details.cshtml
@@ -10,10 +10,13 @@
                 </tr>
             </thead>
             <tbody>
+                @foreach(var product in @Model)
+                {
                 <tr class="row">
-                    <td class="col-lg-5">ProductName</td>
-                    <td class="col-lg-5">ProductPrice</td>
+                    <td class="col-lg-5">@Model.Name</td>
+                    <td class="col-lg-5">@Model.Price</td>
                 </tr>
+                }
             </tbody>
         </table>
         <div class="button-holder text-center">
