SMS Exam done all working

--- a/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Carts/Details.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/Views/Carts/Details.cshtml
@@ -13,8 +13,8 @@
                 @foreach(var product in @Model)
                 {
                 <tr class="row">
-                    <td class="col-lg-5">@Model.Name</td>
-                    <td class="col-lg-5">@Model.Price</td>
+                    <td class="col-lg-5">@product.Name</td>
+                    <td class="col-lg-5">@product.Price</td>
                 </tr>
                 }
             </tbody>
