--- a/C-Sharp-Web-Basics/Exam Preparation/Car Shop/CarShop/Views/Layout.cshtml
+++ b/C-Sharp-Web-Basics/Exam Preparation/Car Shop/CarShop/Views/Layout.cshtml
@@ -1,22 +1,62 @@
-﻿<html>
+﻿<!doctype html>
+<html lang="en">
 <head>
-    <title>My Web Server</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/custom.css">
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <title>SoftUni Carshop</title>
 </head>
-<body>
-    <h1>Welcome to the server</h1>
-    <ul>
-        <li>
-            <a href="/Animals/Cats?name=Sharo&age=5">Cats</a>
-        </li>
-        <li>
-            <a href="/Animals/Dogs">Dogs</a>
-        </li>
-    </ul>
+<body class="container">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <a class="nav-link text-white active h5" href="/">SoftUni Carshop</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="text-white">MENU</span>
+            </button>
 
-    @RenderBody()
+            <div class="collapse navbar-collapse dropright" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    @if(User == null)
+                    {
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/Users/Login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/Users/Register">Register</a>
+                    </li>
+                    }
+                    @if(User != null)
+                    {
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/Cars/Add">Add Car</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white active h5" href="/Cars/All">My Cars</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger active h5" href="/Users/Logout">Logout</a>
+                    </li>
+                    }
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        @RenderBody()
+    </main>
 
-    <div>Footer</div>
+    <footer class="bg-dark">
+        <div class="container-fluid text-center">
+            <small class="footer-background text-white">
+                CopyRight &copy; SoftUni Carshop. All rights reserved.
+            </small>
+        </div>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/custom.js"></script>
 </body>
 </html>
